--- a/index.html
+++ b/index.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS - Katas 03</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <h1>JS - Katas 03</h1>
+    <section id="displayResultado" class="display-results">
+    </section>
+
+    <section class="botoes-katas">
+        <button id="kata1">katas 1</button>
+    </section>
+
+    <section class="botoes-katas">
+        <button id="kata2">katas 2</button>
+    </section>
+
+    <section class="botoes-katas">
+        <button id="kata3">katas 3</button>
+    </section>
+
+    <section class="botoes-katas">
+        <button id="kata4">katas 4</button>
+    </section>
+
+    <section class="botoes-katas">
+        <button id="kata5">katas 5</button>
+    </section>
+
+    <section class="botoes-katas">
+       <button id="kata6">katas 6</button>
+    </section>
+
+      <section class="botoes-katas">
+       <button id="kata7">katas 7</button>
+    </section>
+
+      <section class="botoes-katas">
+       <button id="kata8">katas 8</button>
+    </section>
+
+      <section class="botoes-katas">
+       <button id="kata9">katas 9</button>
+    </section>
+
+      <section class="botoes-katas">
+       <button id="kata10">katas 10</button>
+    </section>
+
+     <section class="botoes-katas">
+       <button id="kata11">katas 11</button>
+    </section>
     <script src="katas3.js"></script>
 </body>
+
 </html>
