--- a/index.html
+++ b/index.html
@@ -56,6 +56,23 @@
      <section class="botoes-katas">
        <button id="kata11">katas 11</button>
     </section>
+
+     <section class="botoes-katas">
+       <button id="kata12">katas 12</button>
+    </section>
+
+     <section class="botoes-katas">
+       <button id="kata13">katas 13</button>
+    </section>
+
+ <section class="botoes-katas">
+       <button id="kata14">katas 14</button>
+    </section>
+
+ <section class="botoes-katas">
+       <button id="kata15">katas 15</button>
+    </section>
+
     <script src="katas3.js"></script>
 </body>
 
